<resources>
    <string name="app_name">Story App Dicoding</string>

    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Ayo berbagi kisah belajarmu selama mengikuti kelas Dicoding!</string>
    <string name="title_welcome_page">Selamat datang di StoryApp!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk berbagi cerita?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Datang di StoryApp.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="password_error">Password tidak boleh kurang dari 8 karakter</string>
    <string name="email_error">Alamat Email Tidak Valid</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="add_location">Tambahkan Lokasi</string>
</resources>